test_data/end_to_end/err__if_invalid_cond_type/stderr.txt
error: invalid type of `if` condition: expected `bool`, found `{}`
  --> main.cz:2:9
2 |     if ({}) {}
            ~~

error: invalid type of `if` condition: expected `bool`, found `<integer>`
  --> main.cz:6:8
6 |     if 0 {}
           ~

error: invalid type of `if` condition: expected `bool`, found `u128`
  --> main.cz:10:8
10 |     if 1u128 {}
            ~~~~~

error: invalid type of `if` condition: expected `bool`, found `<integer>`
  --> main.cz:14:8
14 |     if 1 + 3 / 2 {}
            ~~~~~~~~~

error: invalid type of `if` condition: expected `bool`, found `<float>`
  --> main.cz:18:8
18 |     if 1.0 * 10.0 {}
            ~~~~~~~~~~

error: invalid type of `if` condition: expected `bool`, found `String`
  --> main.cz:22:8
22 |     if "test" {}
            ~~~~~~
